# gec-tt

./: .env.example  .gitignore  Makefile  README.md  TEST_PLAN.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: check_links.yml  dev-deploy.yml  dev-init.yml  release.yml  vpn-disable.yml  vpn-enable.yml
backend/: cache.py  gemini.py  main.py  metrics.py  models.py  rate_limit.py  settings.py
backend/tests/: helpers.py  test_api.py  test_cache.py  test_e2e.py  test_gemini.py  test_integration.py  test_models.py  test_rate_limit.py  test_settings.py  test_utils.py
client/: README.md  analysis_options.yaml  pubspec.yaml
client/android/app/: build.gradle.kts
client/assets/: config.json
client/assets/i18n/: en.json  ru.json  tt.json
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app_config.dart  app_state.dart  backend_client.dart  history_store.dart  i18n.dart  main.dart  models.dart  settings_store.dart
client/lib/sheets/: history_sheet.dart  report_sheet.dart  settings_sheet.dart
client/linux/: CMakeLists.txt
client/test/: app_config_test.dart  app_state_test.dart  models_test.dart  widget_panels_test.dart  widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
deploy/: README.md  dev_deploy.sh  dev_init.sh  precompress_web.sh  vpn_disable.sh  vpn_enable.sh  vpn_policy.sh
deploy/nginx/: gec-tt-app.conf  gec-tt-brotli.conf
deploy/systemd/: gec-tt-backend.service
(+8 files in other folders)
